<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="l_lendings">Выдачи</string>
    <string name="l_books">Книги</string>
    <string name="l_specialties">Специальности</string>
    <string name="l_readers">Читатели</string>
    <string name="l_profile">Профиль</string>
    <string name="exit">Выйти</string>
    <string name="search_lendings">Искать выдачи</string>
    <string name="search_readers">Искать читателей</string>
    <string name="search_specialty">Искать специальность</string>
    <string name="search_books">Искать книги</string>
    <string name="rv_placeholder">Введите поисковый запрос для получения данных</string>
    <string name="get_active_readers">С книгами</string>
    <string name="reader_num">Номер читательского билета</string>
    <string name="reader_name">ФИО</string>
    <string name="book_num">Номер книги </string>
    <string name="book_name">Название</string>
    <string name="book_authors">Авторы</string>
    <string name="extend">Продлить</string>
    <string name="return_book">Закрыть выдачу</string>
    <string name="address">Адрес издательства:</string>
    <string name="publisher">Издательство</string>
    <string name="copy">Количество книг в библиотеке</string>
    <string name="year">Год издания</string>
    <string name="book_num_placeholder">Номер книги</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="get_report">Список выдач книги</string>
    <string name="price">Цена</string>
    <string name="delete_book">Удалить книгу</string>
    <string name="save_book">Добавить книгу</string>
    <string name="clear_fields">Отчистить поля</string>
    <string name="subject">"Дисциплина: "</string>
    <string name="add_book">Добавить книгу</string>
    <string name="form_four">Форма 4</string>
</resources>