<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/CardStyle"
    android:layout_marginVertical="@dimen/padding_small">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle"
                android:text="@string/subject"/>
            <TextView
                android:id="@+id/subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle"
                android:text="@string/book_num"/>
            <TextView
                android:id="@+id/book_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/authors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            style="@style/ImageButtonStyle"
            android:contentDescription="@string/delete_book"
            android:background="@color/secondary"
            android:src="@drawable/delete"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>

