<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.malivasileva.librarian.presentation.lSpecialtyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_large"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/padding_mid"
            android:paddingBottom="@dimen/padding_small"
            android:iconifiedByDefault="false"
            android:background="@color/primary_25"
            android:queryHint="@string/search_specialty"
            />

        <Button
            android:id="@+id/hidden_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_large"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/padding_mid"
            android:paddingBottom="@dimen/padding_small"
            android:visibility="invisible"
            android:text="@string/form_four"
            />


        <TextView
            android:id="@+id/text_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingHorizontal="@dimen/padding_mid"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/rv_placeholder"
            android:textSize="@dimen/text_large"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/background"
            android:backgroundTint="@color/background"
            >
        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/padding_mid"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>