<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tib="http://schemas.android.com/tools">

    <!-- Scrollable content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"> <!-- Отступ для области с кнопками -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_small">

            <TextView
                android:id="@+id/pageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_num_placeholder"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/text_large"/>

            <!-- Title -->
            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_name" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="text"
                    android:hint="@string/book_name"
                    android:layout_toStartOf="@id/edit_title"
                    style="@style/TextViewStyle" />

                <net.colindodd.toggleimagebutton.ToggleImageButton
                    xmlns:tib="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/edit_title"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/edit_or_save_field"
                    style="@style/ImageButtonStyle"
                    tib:tib_drawable_off="@drawable/baseline_edit_24"
                    tib:tib_drawable_on="@drawable/baseline_check_24" />


            </RelativeLayout>

            <!-- Authors -->
            <TextView
                android:id="@+id/text_authors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_authors" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/authors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="text"
                    android:hint="@string/book_authors"
                    android:layout_toStartOf="@id/edit_authors"
                    style="@style/TextViewStyle" />

                <net.colindodd.toggleimagebutton.ToggleImageButton
                    xmlns:tib="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/edit_authors"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/edit_or_save_field"
                    style="@style/ImageButtonStyle"
                    tib:tib_drawable_off="@drawable/baseline_edit_24"
                    tib:tib_drawable_on="@drawable/baseline_check_24" />
            </RelativeLayout>

            <!-- Address -->
            <TextView
                android:id="@+id/text_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="text"
                    android:hint="@string/address"
                    android:layout_toStartOf="@id/edit_address"
                    style="@style/TextViewStyle" />

                <net.colindodd.toggleimagebutton.ToggleImageButton
                    xmlns:tib="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/edit_address"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/edit_or_save_field"
                    style="@style/ImageButtonStyle"
                    tib:tib_drawable_off="@drawable/baseline_edit_24"
                    tib:tib_drawable_on="@drawable/baseline_check_24" />
            </RelativeLayout>

            <!-- Publisher -->
            <TextView
                android:id="@+id/text_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publisher" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/publisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="text"
                    android:hint="@string/publisher"
                    android:layout_toStartOf="@id/edit_publisher"
                    style="@style/TextViewStyle" />

                <net.colindodd.toggleimagebutton.ToggleImageButton
                    xmlns:tib="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/edit_publisher"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/edit_or_save_field"
                    style="@style/ImageButtonStyle"
                    tib:tib_drawable_off="@drawable/baseline_edit_24"
                    tib:tib_drawable_on="@drawable/baseline_check_24" />
            </RelativeLayout>

            <!-- Page -->
            <TextView
                android:id="@+id/text_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pages_in_book" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="number"
                    android:hint="@string/pages_in_book"
                    android:layout_toStartOf="@id/edit_page"
                    style="@style/TextViewStyle" />

                <net.colindodd.toggleimagebutton.ToggleImageButton
                    xmlns:tib="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/edit_page"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/edit_or_save_field"
                    style="@style/ImageButtonStyle"
                    tib:tib_drawable_off="@drawable/baseline_edit_24"
                    tib:tib_drawable_on="@drawable/baseline_check_24" />
            </RelativeLayout>

            <!-- Price -->
            <TextView
                android:id="@+id/text_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="numberDecimal"
                    android:hint="@string/price"
                    android:layout_toStartOf="@id/edit_price"
                    style="@style/TextViewStyle" />

                <net.colindodd.toggleimagebutton.ToggleImageButton
                    xmlns:tib="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/edit_price"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/edit_or_save_field"
                    style="@style/ImageButtonStyle"
                    tib:tib_drawable_off="@drawable/baseline_edit_24"
                    tib:tib_drawable_on="@drawable/baseline_check_24" />
            </RelativeLayout>

            <!-- Copy -->
            <TextView
                android:id="@+id/text_copy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copy" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/copy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="number"
                    android:hint="@string/copy"
                    android:layout_toStartOf="@id/edit_copy"
                    style="@style/TextViewStyle" />

                <net.colindodd.toggleimagebutton.ToggleImageButton
                    xmlns:tib="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/edit_copy"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/edit_or_save_field"
                    style="@style/ImageButtonStyle"
                    tib:tib_drawable_off="@drawable/baseline_edit_24"
                    tib:tib_drawable_on="@drawable/baseline_check_24" />
            </RelativeLayout>

            <!-- Year -->
            <TextView
                android:id="@+id/text_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/year" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="number"
                    android:hint="@string/year"
                    android:layout_toStartOf="@id/edit_year"
                    style="@style/TextViewStyle" />

                <net.colindodd.toggleimagebutton.ToggleImageButton
                    xmlns:tib="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/edit_year"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/edit_or_save_field"
                    style="@style/ImageButtonStyle"
                    tib:tib_drawable_off="@drawable/baseline_edit_24"
                    tib:tib_drawable_on="@drawable/baseline_check_24" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <!-- Bottom buttons -->
    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/padding_small"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/report_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_report" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:backgroundTint="@color/secondary"
            android:text="@string/save_changes" />
    </LinearLayout>
</FrameLayout>
